// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu does not throw errors when data is not passed 1`] = `
<div>
  <nav>
    <a
      class="link"
      href="/"
    >
      <span
        class="linkInner"
      >
        Clients
      </span>
    </a>
    <div
      class="clientWrap"
    />
    <a
      class="link"
      href="/about"
    >
      <span
        class="linkInner"
      >
        About
      </span>
    </a>
    <a
      class="link"
      href="mailto:jonasvail@gmail.com?Subject=Hoi%20Hoi%20Hello!"
    >
      <span
        class="linkInner"
      >
        Contact
      </span>
    </a>
  </nav>
</div>
`;

exports[`Menu renders the list correctly 1`] = `
<div>
  <nav>
    <a
      class="link"
      href="/"
    >
      <span
        class="linkInner"
      >
        Clients
      </span>
    </a>
    <div
      class="clientWrap"
    >
      <a
        class="link"
        href="/twitch"
      >
        <span
          class="linkInner"
        >
          Twitch
        </span>
      </a>
      <a
        class="link"
        href="/adidas"
      >
        <span
          class="linkInner"
        >
          adidas
        </span>
      </a>
      <a
        class="link"
        href="/playstation"
      >
        <span
          class="linkInner"
        >
          PlayStation
        </span>
      </a>
      <a
        class="link"
        href="/al-jazeera"
      >
        <span
          class="linkInner"
        >
          Al Jazeera
        </span>
      </a>
      <a
        class="link"
        href="/hp"
      >
        <span
          class="linkInner"
        >
          HP
        </span>
      </a>
      <a
        class="link"
        href="/ketel-one"
      >
        <span
          class="linkInner"
        >
          Ketel One Vodka
        </span>
      </a>
      <a
        class="link"
        href="/lilly"
      >
        <span
          class="linkInner"
        >
          Lilly
        </span>
      </a>
      <a
        class="link"
        href="/ea-sports"
      >
        <span
          class="linkInner"
        >
          EA SPORTS
        </span>
      </a>
      <a
        class="link"
        href="/dr-martens"
      >
        <span
          class="linkInner"
        >
          Dr. Martens
        </span>
      </a>
      <a
        class="link"
        href="/sega"
      >
        <span
          class="linkInner"
        >
          Sega
        </span>
      </a>
      <a
        class="link"
        href="/mtv"
      >
        <span
          class="linkInner"
        >
          MTV
        </span>
      </a>
    </div>
    <a
      class="link"
      href="/about"
    >
      <span
        class="linkInner"
      >
        About
      </span>
    </a>
    <a
      class="link"
      href="mailto:jonasvail@gmail.com?Subject=Hoi%20Hoi%20Hello!"
    >
      <span
        class="linkInner"
      >
        Contact
      </span>
    </a>
  </nav>
</div>
`;
